# pca-analysis

./: .gitignore  main.py  pca_server.py  pyproject.toml  requirements.txt  vercel.json
static/: index.html  script.js  style.css
