[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pca-analysis"
version = "0.1.0"
description = "A PCA analysis application"
authors = [
    {name = "Luka Krickovic", email = "krickovicluka@gmail.com"}
]
requires-python = ">=3.7"
keywords = ["pca", "data analysis", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "fastapi==0.95.1",
    "uvicorn==0.22.0",
    "pandas==2.0.1",
    "scikit-learn==1.2.2",
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "python-multipart==0.0.6",
]

